--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,84 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: rgb(229, 229, 229) !important;
+body {
+    background-color: #36393F;
+    font-family: Arial, sans-serif;
+    color: white;
 }
-#error{
-    color: red;
+
+.container {
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 30px;
+    background-color: #2F3136;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.3);
 }
-.section_wrapper .section{
-    margin: 0 auto;
-    width: 30%;
-    margin-top: 50px;
-    height: 71%;
-    border: 1px solid #dedede;
+
+h1 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 24px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
     font-size: 18px;
-    font-family: revert;
-    color: rgb(137 137 137) !important;
+    border: none;
+    border-radius: 5px;
+    background-color: #545b62;
+    color: white;
+}
+
+input[type="submit"] {
+    width: 50%;
+    padding: 10px;
+    font-size: 18px;
+    background-color: #7289DA;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+}
+
+ul {
+    margin: 30px 0;
+    padding: 0;
+    list-style: none;
+    max-height: 200px;
+    overflow-y: auto;
+}
+
+li {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    background-color: #545b62;
+}
+
+span {
+    flex-grow: 1;
+    margin-left: 10px;
+    font-size: 18px;
+}
+
+.done {
+    text-decoration: line-through;
+    opacity: 0.5;
+}
+
+a.icon {
+    color: #fff;
+}
+p{
+    color: #d05454;
+    font-size: 15px;
 }
